--- a/property-management/src/main/java/com/property/property_management/application.properties
+++ b/property-management/src/main/java/com/property/property_management/application.properties
@@ -4,12 +4,13 @@ server.port=9090
 server.servlet.context-path=/
 
 # Database configuration (H2 in-memory database for development)
-spring.datasource.url=jdbc:mysql://localhost:3306/property-management
+spring.datasource.url=jdbc:mysql://localhost:3306/management
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 
