--- a/property-management/src/main/resources/application.properties
+++ b/property-management/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9090
 server.servlet.context-path=/
 
 # Database configuration (H2 in-memory database for development)
-spring.datasource.url=jdbc:mysql://localhost:3306/property
+spring.datasource.url=jdbc:mysql://localhost:3306/management
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
